--- a/notebooks/Ch03-1-Functions-Built-in.ipynb
+++ b/notebooks/Ch03-1-Functions-Built-in.ipynb
@@ -128,7 +128,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### globals() and locals()\n",
     "- globals() returns a dictionary representing the current global symbol table\n",
@@ -602,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
