--- a/notebooks/Ch03-3-Functions-UserDefined.ipynb
+++ b/notebooks/Ch03-3-Functions-UserDefined.ipynb
@@ -291,7 +291,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Passing data as arguments to functions\n",
     "- functions are subprograms that may need external data to work with\n",
@@ -470,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -968,9 +968,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
