--- a/notebooks/Ch04-Conditionals.ipynb
+++ b/notebooks/Ch04-Conditionals.ipynb
@@ -212,7 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"Corin\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,26 +233,25 @@
     }
    ],
    "source": [
-    "if True:\n",
+    "if name:\n",
     "    print('Hello, there!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "value of a equals to apple\n",
       "continue execution here...\n"
      ]
     }
    ],
    "source": [
-    "a = 'apple'\n",
+    "a = 'pple'\n",
     "if a == 'apple': # this should evaluate True\n",
     "    print('value of a equals to apple')\n",
     "print('continue execution here...')"
@@ -296,25 +304,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100.5 is greater than 100.49999999999999\n"
+      "100.4 is equal to 100.4\n"
      ]
     }
    ],
    "source": [
-    "num1 = 100.5\n",
-    "num2 = 100.49999999999999\n",
+    "num1 = 100.4\n",
+    "num2 = 100.4\n",
     "\n",
     "if  num1 > num2:\n",
     "    print('{} is greater than {}'.format(num1, num2))\n",
+    "elif num2 > num1:\n",
+    "    print('{} is less than {}'.format(num1, num2))\n",
     "else:\n",
-    "    print('{} is NOT greater than {}'.format(num1, num2))"
+    "    print('{} is equal to {}'.format(num1, num2))"
    ]
   },
   {
@@ -441,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -461,22 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-14 is even and negative\n"
+      "-13 is odd and negative\n"
      ]
     }
    ],
    "source": [
     "# and demo\n",
-    "num = -14\n",
-    "if num %2 == 0 and num < 0:\n",
-    "    print(f\"{num} is even and negative\")"
+    "num = -13\n",
+    "if num %2 == 1 and num < 0:\n",
+    "    print(f\"{num} is odd and negative\")"
    ]
   },
   {
@@ -485,12 +495,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How much money have you saved?  100\n",
+      "Do you have a farrari? [y/yes | n/no]:  n\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How much money have you saved? 100000\n",
-      "Do you have a farrari? [y/yes | n/no]: yes\n",
-      "Congrats!! You can retire now.\n"
+      "Sorry, keep working!!\n"
      ]
     }
    ],
@@ -507,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
