--- a/notebooks/Ch05-Iterations.ipynb
+++ b/notebooks/Ch05-Iterations.ipynb
@@ -434,14 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter a whole number:  1.2\n"
+      "Enter a whole number:  3.14\n"
      ]
     },
     {
@@ -543,13 +543,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "count = 1\n",
     "while count < 5:\n",
     "    print(count)\n",
+    "    if(count > 3):\n",
+    "        break\n",
     "    count += 1\n",
     "else:\n",
     "    print(\"Look loop didn't encounter break\")"
