kattis morse_code_palidrome

--- a/notebooks/Ch09-1-Dictionaries.ipynb
+++ b/notebooks/Ch09-1-Dictionaries.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -486,12 +486,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uno\n"
+     ]
+    }
+   ],
    "source": [
     "# can also return default value if key doesn't exist\n",
-    "print(eng2sp.get(\"Ondfe\", '?'))"
+    "print(eng2sp.get(\"One\", '?'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uno\n"
+     ]
+    }
+   ],
+   "source": [
+    "if( \"One\" in eng2sp):\n",
+    "    print(eng2sp[\"One\"])"
    ]
   },
   {
@@ -499,6 +525,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value =  uno\n",
+      "value =  dos\n",
+      "value =  tres\n",
+      "value =  quatro\n",
+      "value =  sinco\n"
+     ]
+    }
+   ],
    "source": [
     "# iterate over values\n",
     "for val in eng2sp.values():\n",
@@ -525,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,9 +579,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('One', 'uno'), ('two', 'dos'), ('three', 'tres'), (4, 'quatro'), ('five', 'sinco')]\n"
+     ]
+    }
+   ],
    "source": [
     "print(items)"
    ]
@@ -553,9 +606,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One -> uno\n",
+      "two -> dos\n",
+      "three -> tres\n",
+      "4 -> quatro\n",
+      "five -> sinco\n"
+     ]
+    }
+   ],
    "source": [
     "for k, v in eng2sp.items():\n",
     "    print('{} -> {}'.format(k, v))"
@@ -582,18 +647,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"One\" in eng2sp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Ten\" in eng2sp"
    ]
