added disclaimer and chatgpt note

--- a/ClassNotesFall24/Nov15-Security/Python-CyberSecurity.ipynb
+++ b/ClassNotesFall24/Nov15-Security/Python-CyberSecurity.ipynb
@@ -46,12 +46,12 @@
     "     - Python’s readability, flexibility, and libraries make it suitable for cybersecurity, enabling rapid development for scripting, automation and testing.\n",
     "\n",
     "   - **Popular Use Cases**\n",
-    "     - **Web Application Security and OWASP Compliance**: Python can automate vulnerability scans and simulate attacks on web applications based on OWASP guidelines.\n",
-    "     - **Network Scanning**: Tools like `nmap` for analyzing network architecture.\n",
+    "     - **Web Application Security**: Automate vulnerability scans and simulate attacks on web applications.\n",
+    "     - **Network Scanning**: Tools like `nmap` for analyzing network topology.\n",
     "     - **Data Encryption**: `pyca/cryptography` for implementing encryption and decryption techniques.\n",
     "\n",
     "   - **Source:**  \n",
-    "     - [Scapy Documentation](https://scapy.readthedocs.io/)  \n",
+    "     - [python-nmap](https://pypi.org/project/python-nmap/)\n",
     "     - [awesome-python-security](https://github.com/guardrailsio/awesome-python-security?tab=readme-ov-file)"
    ]
   },
@@ -61,12 +61,14 @@
    "source": [
     "### **3. Resources and Tools**\n",
     "\n",
-    "   - **Libraries to Explore**\n",
-    "     - **`Scapy`**: For network packet analysis, useful in vulnerability scanning.\n",
-    "       - [Scapy Documentation](https://scapy.readthedocs.io/)\n",
-    "     - **`Requests` and `BeautifulSoup`**: For open-source intelegence (OSINT) tasks and simulating OWASP web application security tests.\n",
-    "     - **`PyCryptodome`**: For cryptographic functions like encryption, useful in ensuring data integrity.\n",
-    "     - **`Impacket` and `Pwntools`**: For penetration testing and exploitation, aligning with the OWASP principles for security testing.\n",
+    "   - **Libraries & References to Explore**\n",
+    "     - [awesome-python-security](https://github.com/guardrailsio/awesome-python-security?tab=readme-ov-file)\n",
+    "     - Tools\n",
+    "       - **`Scapy`**: For network packet analysis, useful in vulnerability scanning.\n",
+    "         - [Scapy Documentation](https://scapy.readthedocs.io/)\n",
+    "       - **`Requests` and `BeautifulSoup`**: For open-source intelegence (OSINT) tasks and simulating OWASP web application security tests.\n",
+    "       - **`PyCryptodome`**: For cryptographic functions like encryption, useful in ensuring data integrity.\n",
+    "       - **`Impacket` and `Pwntools`**: For penetration testing and exploitation, aligning with the OWASP principles for security testing.\n",
     "  \n",
     "   - **Organizations to Follow**\n",
     "     - [CMU Cybersecurity Programs](https://catalog.coloradomesa.edu/areas-study/cyber-security/)\n",
