--- a/notebooks/Ch02-1-Data-Variables-StdIO.ipynb
+++ b/notebooks/Ch02-1-Data-Variables-StdIO.ipynb
@@ -953,13 +953,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n"
+      "36\n"
      ]
     }
    ],
    "source": [
     "# Some examples\n",
-    "print(2 * 3 ** 2)"
+    "print((2 * 3) ** 2)"
    ]
   },
   {
@@ -994,14 +994,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JohnSmith\n"
+      "John Smith\n"
      ]
     }
    ],
@@ -1009,13 +1009,13 @@
     "# Some examples\n",
     "fname = \"John\"\n",
     "lname = \"Smith\"\n",
-    "fullName = fname + lname\n",
+    "fullName = fname + \" \" + lname\n",
     "print(fullName)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1088,14 +1088,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number => 5.5\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number => 5\n"
+      "You entered:  5.5\n",
+      "type of 5.5 = <class 'str'>\n",
+      "5.5\n"
      ]
     },
     {
@@ -1110,7 +1119,8 @@
    "source": [
     "num = input('Enter a number =>')\n",
     "print('You entered: ', num)\n",
-    "print('type of', num, '=', type(num))"
+    "print('type of', num, '=', type(num))\n",
+    "print(float(num))"
    ]
   },
   {
