--- a/notebooks/Ch04-Conditionals.ipynb
+++ b/notebooks/Ch04-Conditionals.ipynb
@@ -547,15 +547,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How much money have you saved?  1000000\n",
+      "Do you have a farrari? [y/yes | n/no]:  n\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How much money have you saved? 10\n",
-      "Do you have a farrari? [y/yes | n/no]: y\n",
       "Congrats!! You can retire now.\n"
      ]
     }
