--- a/notebooks/Ch06-Strings.ipynb
+++ b/notebooks/Ch06-Strings.ipynb
@@ -1219,9 +1219,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Well, I never did!\", said Alice.\n"
+     ]
+    }
+   ],
    "source": [
     "# create a new string removing punctuations from the following string\n",
     "ss = '\"Well, I never did!\", said Alice.'\n",
@@ -1230,9 +1238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97 122 65 90\n"
+     ]
+    }
+   ],
    "source": [
     "# one solution is to use ASCII value of each character between A..Z and a..z\n",
     "print(ord('a'), ord('z'), ord('A'), ord('Z'))"
@@ -1290,9 +1306,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on module string:\n",
+      "\n",
+      "NAME\n",
+      "    string - A collection of string constants.\n",
+      "\n",
+      "MODULE REFERENCE\n",
+      "    https://docs.python.org/3.12/library/string.html\n",
+      "\n",
+      "    The following documentation is automatically generated from the Python\n",
+      "    source files.  It may be incomplete, incorrect or include features that\n",
+      "    are considered implementation detail and may vary between Python\n",
+      "    implementations.  When in doubt, consult the module reference at the\n",
+      "    location listed above.\n",
+      "\n",
+      "DESCRIPTION\n",
+      "    Public module variables:\n",
+      "\n",
+      "    whitespace -- a string containing all ASCII whitespace\n",
+      "    ascii_lowercase -- a string containing all ASCII lowercase letters\n",
+      "    ascii_uppercase -- a string containing all ASCII uppercase letters\n",
+      "    ascii_letters -- a string containing all ASCII letters\n",
+      "    digits -- a string containing all ASCII decimal digits\n",
+      "    hexdigits -- a string containing all ASCII hexadecimal digits\n",
+      "    octdigits -- a string containing all ASCII octal digits\n",
+      "    punctuation -- a string containing all ASCII punctuation characters\n",
+      "    printable -- a string containing all ASCII characters considered printable\n",
+      "\n",
+      "CLASSES\n",
+      "    builtins.object\n",
+      "        Formatter\n",
+      "        Template\n",
+      "\n",
+      "    class Formatter(builtins.object)\n",
+      "     |  Methods defined here:\n",
+      "     |\n",
+      "     |  check_unused_args(self, used_args, args, kwargs)\n",
+      "     |\n",
+      "     |  convert_field(self, value, conversion)\n",
+      "     |\n",
+      "     |  format(self, format_string, /, *args, **kwargs)\n",
+      "     |\n",
+      "     |  format_field(self, value, format_spec)\n",
+      "     |\n",
+      "     |  get_field(self, field_name, args, kwargs)\n",
+      "     |      # given a field_name, find the object it references.\n",
+      "     |      #  field_name:   the field being looked up, e.g. \"0.name\"\n",
+      "     |      #                 or \"lookup[3]\"\n",
+      "     |      #  used_args:    a set of which args have been used\n",
+      "     |      #  args, kwargs: as passed in to vformat\n",
+      "     |\n",
+      "     |  get_value(self, key, args, kwargs)\n",
+      "     |\n",
+      "     |  parse(self, format_string)\n",
+      "     |      # returns an iterable that contains tuples of the form:\n",
+      "     |      # (literal_text, field_name, format_spec, conversion)\n",
+      "     |      # literal_text can be zero length\n",
+      "     |      # field_name can be None, in which case there's no\n",
+      "     |      #  object to format and output\n",
+      "     |      # if field_name is not None, it is looked up, formatted\n",
+      "     |      #  with format_spec and conversion and then used\n",
+      "     |\n",
+      "     |  vformat(self, format_string, args, kwargs)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors defined here:\n",
+      "     |\n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables\n",
+      "     |\n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object\n",
+      "\n",
+      "    class Template(builtins.object)\n",
+      "     |  Template(template)\n",
+      "     |\n",
+      "     |  A string class for supporting $-substitutions.\n",
+      "     |\n",
+      "     |  Methods defined here:\n",
+      "     |\n",
+      "     |  __init__(self, template)\n",
+      "     |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      "     |\n",
+      "     |  get_identifiers(self)\n",
+      "     |\n",
+      "     |  is_valid(self)\n",
+      "     |\n",
+      "     |  safe_substitute(self, mapping={}, /, **kws)\n",
+      "     |\n",
+      "     |  substitute(self, mapping={}, /, **kws)\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Class methods defined here:\n",
+      "     |\n",
+      "     |  __init_subclass__()\n",
+      "     |      This method is called when a class is subclassed.\n",
+      "     |\n",
+      "     |      The default implementation does nothing. It may be\n",
+      "     |      overridden to extend subclasses.\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors defined here:\n",
+      "     |\n",
+      "     |  __dict__\n",
+      "     |      dictionary for instance variables\n",
+      "     |\n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object\n",
+      "     |\n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes defined here:\n",
+      "     |\n",
+      "     |  braceidpattern = None\n",
+      "     |\n",
+      "     |  delimiter = '$'\n",
+      "     |\n",
+      "     |  flags = re.IGNORECASE\n",
+      "     |\n",
+      "     |  idpattern = '(?a:[_a-z][_a-z0-9]*)'\n",
+      "     |\n",
+      "     |  pattern = re.compile('\\n            \\\\$(?:\\n              ...identifie...\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    capwords(s, sep=None)\n",
+      "        capwords(s [,sep]) -> string\n",
+      "\n",
+      "        Split the argument into words using split, capitalize each\n",
+      "        word using capitalize, and join the capitalized words using\n",
+      "        join.  If the optional second argument sep is absent or None,\n",
+      "        runs of whitespace characters are replaced by a single space\n",
+      "        and leading and trailing whitespace are removed, otherwise\n",
+      "        sep is used to split and join the words.\n",
+      "\n",
+      "DATA\n",
+      "    __all__ = ['ascii_letters', 'ascii_lowercase', 'ascii_uppercase', 'cap...\n",
+      "    ascii_letters = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+      "    ascii_lowercase = 'abcdefghijklmnopqrstuvwxyz'\n",
+      "    ascii_uppercase = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+      "    digits = '0123456789'\n",
+      "    hexdigits = '0123456789abcdefABCDEF'\n",
+      "    octdigits = '01234567'\n",
+      "    printable = '0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTU...\n",
+      "    punctuation = '!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'\n",
+      "    whitespace = ' \\t\\n\\r\\x0b\\x0c'\n",
+      "\n",
+      "FILE\n",
+      "    c:\\users\\corin\\anaconda3\\lib\\string.py\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# next solution using string library\n",
     "# string library provides range of different types of characters as data\n",
@@ -1321,9 +1492,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Well I never did said Alice\n"
+     ]
+    }
+   ],
    "source": [
     "newStr = ''\n",
     "for c in ss:\n",
@@ -1340,7 +1519,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# write a function that removes all the punctations except for space\n",
@@ -1360,7 +1543,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "s = cleanUp(ss)\n",
@@ -1385,11 +1572,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Corinr\"\n",
+    "name = \"Corin\"\n",
     "age = 25"
    ]
   },
@@ -1423,24 +1610,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# note age and name are provided in reverse order\n",
-    "print(\"His name is {1} and {1} is {0} years old.\".format(age, name))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 x 5.5 = 22.0 and 4 ^ 5.5 = 2048.00\n"
+      "His name is Corin and 25 is Corin years old.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# note age and name are provided in reverse order\n",
+    "print(\"His name is {1} and {0} is {1} years old.\".format(age, name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 x 5.5 = 22.0 and 4 ^ 5.5 = 2e+03\n"
      ]
     }
    ],
@@ -1453,25 +1648,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pi to three decimal places is 3.142\n"
+      "Pi to three decimal places is 3.14\n"
      ]
     }
    ],
    "source": [
     "# formating decimal/float values to certian decimal points\n",
-    "print(\"Pi to three decimal places is {0:.3f}\".format(3.1415926))"
+    "print(\"Pi to three decimal places is {0:.2f}\".format(3.1415926))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1564,11 +1759,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0:>4}{1:>6}{2:>6}{3:>8}{4:>13}{5:>24}\n",
+      "   i  i**2  i**3    i**5        i**10                   i**20\n",
+      "   1     1     1       1            1                       1\n",
+      "   2     4     8      32         1024                 1048576\n",
+      "   3     9    27     243        59049              3486784401\n",
+      "   4    16    64    1024      1048576           1099511627776\n",
+      "   5    25   125    3125      9765625          95367431640625\n",
+      "   6    36   216    7776     60466176        3656158440062976\n",
+      "   7    49   343   16807    282475249       79792266297612001\n",
+      "   8    64   512   32768   1073741824     1152921504606846976\n",
+      "   9    81   729   59049   3486784401    12157665459056928801\n",
+      "  10   100  1000  100000  10000000000   100000000000000000000\n"
+     ]
+    }
+   ],
    "source": [
     "layout = \"{0:>4}{1:>6}{2:>6}{3:>8}{4:>13}{5:>24}\"\n",
+    "print(layout)\n",
     "\n",
     "print(layout.format(\"i\", \"i**2\", \"i**3\", \"i**5\", \"i**10\", \"i**20\"))\n",
     "for i in range(1, 11):\n",
