--- a/notebooks/Ch07-Tuples.ipynb
+++ b/notebooks/Ch07-Tuples.ipynb
@@ -21,7 +21,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_born = (\"Paris Hilton\", 1981) # tuple packing"
+    "year_born = \"Paris Hilton\", 1981 # tuple packing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "year_born=('Paris Hilton', 1981)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{year_born=}\")"
    ]
   },
   {
