--- a/notebooks/Ch09-1-Dictionaries.ipynb
+++ b/notebooks/Ch09-1-Dictionaries.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eng2sp['One'] = 'Uno'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'One': 'uno', 'two': 'dos', 'three': 'tres', 4: 'quatro', 'five': 'sinco', 'Five': 'Sinco'}\n"
+      "{'One': 'Uno', 'two': 'dos', 'three': 'tres', 4: 'quatro', 'five': 'sinco', 'Five': 'Sinco'}\n"
      ]
     }
    ],
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,9 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Uno'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "eng2sp[one]"
    ]
@@ -258,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,24 +307,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'One': ['uno'],\n",
-       " 'two': 'dos',\n",
-       " 'three': 'tres',\n",
-       " 4: 'quatro',\n",
-       " 'five': 'sinco',\n",
-       " 'Five': 'Sinco',\n",
-       " 'ten': 'diez'}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'eng2sp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m eng2sp\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'eng2sp' is not defined"
+     ]
     }
    ],
    "source": [
@@ -313,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,11 +381,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dos\n"
+     ]
+    }
+   ],
    "source": [
     "print(adict[2][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tres\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How do you access tres in adict?\n",
+    "print(adict[3]['three'])"
    ]
   },
   {
@@ -379,8 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How do you access tres in adict?\n",
-    "print(adict[3]['three'])"
+    "print(adist[1]["
    ]
   },
   {
@@ -401,14 +441,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eng2sp = {'One': 'Uno',\n",
+    " 'two': 'dos',\n",
+    " 'three': 'tres',\n",
+    " 4: 'quatro',\n",
+    " 'five': 'sinco',\n",
+    " 'Five': 'Sinco',\n",
+    " 'ten': 'diez'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "key One maps to value ['UNO', 'uno', 'Uno']\n",
+      "key One maps to value Uno\n",
       "key two maps to value dos\n",
       "key three maps to value tres\n",
       "key 4 maps to value quatro\n",
@@ -419,38 +474,54 @@
     }
    ],
    "source": [
-    "for k in eng2sp.keys(): # the keys are ordered based on their insertion order\n",
-    "    print(\"key {} maps to value {}\".format(k, eng2sp[k]))"
+    "for key in eng2sp.keys(): # the keys are ordered based on their insertion order\n",
+    "    print(\"key {} maps to value {}\".format(key, eng2sp[key]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(list(eng2sp.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(list(eng2sp.values()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "key = One value = ['UNO', 'uno', 'Uno']\n",
+      "['One', 'two', 'three', 4, 'five', 'Five', 'ten']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(eng2sp.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Uno', 'dos', 'tres', 'quatro', 'sinco', 'Sinco', 'diez']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(eng2sp.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key = One value = Uno\n",
       "key = two value = dos\n",
       "key = three value = tres\n",
       "key = 4 value = quatro\n",
@@ -462,13 +533,35 @@
    ],
    "source": [
     "# iterate over keys\n",
-    "for k in eng2sp:\n",
-    "    print('key = {} value = {}'.format(k, eng2sp.get(k)))"
+    "for key in eng2sp:\n",
+    "    print('key = {} value = {}'.format(key, eng2sp.get(key)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 0 name=Corin\n",
+      "i = 1 name=sarah\n",
+      "i = 2 name=bob\n",
+      "i = 3 name=kelly\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Corin\", \"sarah\", \"bob\", \"kelly\"]\n",
+    "for i in range(len(names)):\n",
+    "    print(f'i = {i} name={names[i]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -486,32 +579,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uno\n"
+      "no se\n"
      ]
     }
    ],
    "source": [
     "# can also return default value if key doesn't exist\n",
-    "print(eng2sp.get(\"One\", '?'))"
+    "print(eng2sp.get(\"Onne\", 'no se'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uno\n"
+      "Uno\n"
      ]
     }
    ],
@@ -522,25 +615,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "eng2sp[\"onne\"] = \"Uno\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "value =  uno\n",
+      "value =  Uno\n",
       "value =  dos\n",
       "value =  tres\n",
       "value =  quatro\n",
-      "value =  sinco\n"
+      "value =  sinco\n",
+      "value =  Sinco\n",
+      "value =  diez\n",
+      "value =  Uno\n"
      ]
     }
    ],
@@ -570,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,14 +677,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('One', 'uno'), ('two', 'dos'), ('three', 'tres'), (4, 'quatro'), ('five', 'sinco')]\n"
+      "[('One', 'Uno'), ('two', 'dos'), ('three', 'tres'), (4, 'quatro'), ('five', 'sinco'), ('Five', 'Sinco'), ('ten', 'diez'), ('onne', 'Uno')]\n"
      ]
     }
    ],
@@ -606,24 +704,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One -> uno\n",
+      "One -> Uno\n",
       "two -> dos\n",
       "three -> tres\n",
       "4 -> quatro\n",
-      "five -> sinco\n"
+      "five -> sinco\n",
+      "Five -> Sinco\n",
+      "ten -> diez\n",
+      "onne -> Uno\n"
      ]
     }
    ],
    "source": [
-    "for k, v in eng2sp.items():\n",
-    "    print('{} -> {}'.format(k, v))"
+    "for (key, value) in eng2sp.items():\n",
+    "    print('{} -> {}'.format(key, value))"
    ]
   },
   {
@@ -704,15 +805,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digits={1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n",
+      "digits1={1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n",
+      "digits2={1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n",
+      "digits3={1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n"
+     ]
+    }
+   ],
    "source": [
     "import copy\n",
-    "digits = {1: 'one', 2: 'two', 3: ['three', 'Three', 'THREE']}\n",
+    "a = \"three\"\n",
+    "digits = {1: 'one', 2: 'two', 3: [a, 'Three', 'THREE']}\n",
     "digits1 = digits # creates an alias\n",
     "digits2 = digits.copy() # shallow copy\n",
-    "digits3 = copy.deepcopy(digits) # deep copy"
+    "digits3 = copy.deepcopy(digits) # deep copy\n",
+    "a = \"Four\"\n",
+    "print(f\"{digits=}\")\n",
+    "print(f\"{digits1=}\")\n",
+    "print(f\"{digits2=}\")\n",
+    "print(f\"{digits3=}\")\n"
    ]
   },
   {
